# chessdotcom_ai_coach

./: .gitignore  Dockerfile  README.md  compose.yaml  conftest.py  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
.zed/: tasks.json
alembic/: env.py
alembic/versions/: 63983a03cece_add_user_table.py
chess_engine/: Dockerfile
chessdotcom_ai_coach/: __init__.py  admin.py  apps.py  asgi.py  auth_service.py  celery.py  client.py  context_processors.py  dependencies.py  game_service.py  main.py  models.py  scheduler.py  settings.py  tasks.py  urls.py  user.py  views.py  wsgi.py
chessdotcom_ai_coach/management/commands/: analyze_active_games.py  analyze_game.py  run_scheduler.py
chessdotcom_ai_coach/migrations/: 0001_initial.py  0002_coachsuggestion_game.py  0003_add_analysis_enqueued_fen.py  0003_coachsuggestion_status_and_more.py  0003_game_analysis_enqueued_at_game_analysis_enqueued_fen_and_more.py  0004_game_result_game_result_detail.py
chessdotcom_ai_coach/routers/: auth.py  components.py  pages.py
chessdotcom_ai_coach/services/: analysis.py  auto_analyze.py  board.py  chess_client.py  coach.py  game_store.py  scheduler.py
chessdotcom_ai_coach/static/css/: styles.css
chessdotcom_ai_coach/static/js/: board.js
chessdotcom_ai_coach/templates/: _coach_suggestion.html  base.html  detail_board_page.html  detail_page.html  error.html  game.html  game_detail.html  game_list.html  game_page.html  game_review.html  home.html  home_page.html  index.html  login.html  profile.html
chessdotcom_ai_coach/templates/chessdotcom_ai_coach/: base.html  error.html  game.html  home.html  login.html
chessdotcom_ai_coach/templates/components/: game_list.html
chessdotcom_ai_coach/templates/partials/: board.html  board_panel.html  coach_card.html  coach_history.html  coach_panel.html  detail_error.html  game_body.html  game_list.html  history_list.html  moves_grid.html  moves_list.html  pbar.html  position.html
coach/: models.py  urls.py  views.py
coach/templates/coach/: _game_list.html  error.html  game.html  home.html  (+1 more)
ollama/: Dockerfile  entrypoint.sh
scripts/: create_user.py
static/css/: styles.css
tests/: test_analysis.py  test_auto_analyze.py  test_board.py  test_chess_client.py  test_coach.py  test_game_store.py  test_models.py  test_review.py  test_scheduler.py  test_tasks.py  test_views.py
(+4 files in other folders)
