[project]
name = "chessdotcom-ai-coach"
version = "1.0.0"
description = ""
authors = [
    {name = "gab-25",email = "gabrielesorci.25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess-com (>=3.13.0,<4.0.0)",
    "django (>=5.1,<6.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "django-htmx>=1.28.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
